<resources>
    <string name="app_name">Assignment8.2</string>
    <string name="information">Information</string>
    <string name="enter_name">Enter name</string>
    <string name="enter_age">Enter Age</string>
    <string name="enter_phone">Enter Phone</string>
    <string name="enter_city">Enter City</string>
    <string name="saveBtnLabel">Save</string>
    <string name="showBtnLabel">Show</string>
</resources>
