<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.example.vimadhavan.assignment82.MainActivity">

    <TextView
        android:id="@+id/stored_Txt"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/information"
        android:textSize="20sp"
        android:layout_centerHorizontal="true"
        android:padding="10dp"/>

    <EditText
        android:id="@+id/nameTxt"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/enter_name"
        android:textSize="16sp"
        android:textColorHint="#888"
        android:layout_below="@id/stored_Txt"
        android:padding="10dp"
        />
    <EditText
        android:id="@+id/ageTxt"
        android:inputType="number"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/enter_age"
        android:textSize="16sp"
        android:textColorHint="#888"
        android:layout_below="@id/nameTxt"
        android:padding="10dp"
        android:layout_marginTop="10dp"
        />
    <EditText
        android:id="@+id/phoneTxt"
        android:inputType="phone"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/enter_phone"
        android:textSize="16sp"
        android:textColorHint="#888"
        android:layout_below="@id/ageTxt"
        android:layout_marginTop="10dp"
        android:padding="10dp"
        />
    <EditText
        android:id="@+id/cityTxt"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/enter_city"
        android:textSize="16sp"
        android:textColorHint="#888"
        android:layout_below="@id/phoneTxt"
        android:layout_marginTop="10dp"
        android:padding="10dp"
        />

    <Button
        android:id="@+id/saveBtn"
        android:layout_width="200dp"
        android:layout_height="wrap_content"
        android:text="@string/saveBtnLabel"
        android:gravity="center"
        android:layout_below="@id/cityTxt"
        android:textSize="16sp"
        android:background="@color/colorAccent"
        android:padding="10dp"
        android:textColor="#fff"
        android:layout_margin="20dp"
        android:layout_centerHorizontal="true"/>

    <Button
        android:id="@+id/showBtn"
        android:layout_width="200dp"
        android:layout_height="wrap_content"
        android:text="@string/showBtnLabel"
        android:gravity="center"
        android:layout_below="@id/saveBtn"
        android:textSize="16sp"
        android:background="@color/colorAccent"
        android:padding="10dp"
        android:textColor="#fff"
        android:layout_margin="20dp"
        android:layout_centerHorizontal="true"/>




</RelativeLayout>
